# laughing-couscous

./: Dockerfile.airflow  Dockerfile.mlflow  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: run-test.yaml
src/api/: main.py
src/dags/: train_model.py
src/laughing_couscous/modeling/: load_data.py  train.py
src/model/: inference.py  train.py
src/modeling/: predict.py
tests/modeling/: test_load_data.py
