[project]
name = "laughing-couscous"
version = "0.1.0"
description = "A couscous that likes to laugh and work with [ML/Air]Flow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.4",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
mlflow = [
    "mlflow>=2.17.0",
    "scikit-learn>=1.5.2",
]
airflow = [
    "apache-airflow>=2.10.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
